--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     width: 9999px;
     position: absolute;
     left: 0px;
+    transition: 1s;
   }
 
   .imgScroll .showContainer .container img {
